bge.logic.LibLoad fails to import text blocks #31396

Closed
opened 2012-05-10 22:16:36 +02:00 by Leonard Ritter · 5 comments

%%%I'm encountering the issue of being unable to import an external blend file with its embedded scripts and shaders intact. bge.logic.startGame seems to work fine, but the function doesn't give me the option to load from memory, which I need to obfuscate the content (just something that makes it not that easy for players to rummage in the assets for puzzle solutions).

Steps to reproduce:

  1. Copy both main.blend and loader.blend to the same directory.

  2. Open the attached 'main.blend' and press P to start the game. Observe how the cube appears and the console prints "BANG!", giving evidence that the embedded script has been imported and executed.

  3. Open the attached 'loader.blend' and press P to start the game. main.blend will now be loaded via LibLoad, but instead of a "BANG!", an error will be printed to the console instead:

Loading...
Python module can't be imported - object 'Cube', controller 'Python':
ImportError: No module named embedded
Added cam Camera
Python module can't be imported - object 'Cube', controller 'Python':
ImportError: No module named embedded
Blender Game Engine Finished

Tested with Blender 2.63 on Ubuntu 12.04, linux-64.%%%

%%%I'm encountering the issue of being unable to import an external blend file with its embedded scripts and shaders intact. bge.logic.startGame seems to work fine, but the function doesn't give me the option to load from memory, which I need to obfuscate the content (just something that makes it not that easy for players to rummage in the assets for puzzle solutions). Steps to reproduce: 1. Copy both main.blend and loader.blend to the same directory. 2. Open the attached 'main.blend' and press P to start the game. Observe how the cube appears and the console prints "BANG!", giving evidence that the embedded script has been imported and executed. 3. Open the attached 'loader.blend' and press P to start the game. main.blend will now be loaded via LibLoad, but instead of a "BANG!", an error will be printed to the console instead: Loading... Python module can't be imported - object 'Cube', controller 'Python': ImportError: No module named embedded Added cam Camera Python module can't be imported - object 'Cube', controller 'Python': ImportError: No module named embedded Blender Game Engine Finished Tested with Blender 2.63 on Ubuntu 12.04, linux-64.%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Moved from Blender 2.6 Bug Tracker to Game Engine%%%

%%%Moved from Blender 2.6 Bug Tracker to Game Engine%%%

%%%moving to the BGE tracker.
Mitchell, can you take a look at this?%%%

%%%moving to the BGE tracker. Mitchell, can you take a look at this?%%%

%%%I've committed a fix as r48147. I'm closing this report; if you continue to have problems, it can be reopened.%%%

%%%I've committed a fix as r48147. I'm closing this report; if you continue to have problems, it can be reopened.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#31396
No description provided.